[gd_scene load_steps=4 format=3 uid="uid://dyalkv6xkihdc"]

[ext_resource type="Script" uid="uid://cqmbb78gfeqtw" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://5j2ek2uxqjqv" path="res://art/Pixelpurl-0vBPP.ttf" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://btjufsrh7esu1" path="res://scenes/main_menu_settings.tscn" id="3_bqqt6"]

[node name="Main Menu" type="Node"]
script = ExtResource("1_bqqt6")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.20958686, 0.7664674, 0.5565083, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.5
offset_top = -618.0
offset_right = 384.5
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 200
text = "Game
  of 
Power"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -6.5
offset_right = 107.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 150
text = "Play"

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = 179.5
offset_right = 201.0
offset_bottom = 316.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 150
text = "Settings"

[node name="Main_Menu_Settings" parent="." instance=ExtResource("3_bqqt6")]

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="closed" from="Main_Menu_Settings" to="." method="_on_main_menu_settings_closed"]
